--- a/package.json
+++ b/package.json
@@ -10,25 +10,26 @@
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "dotenv": "^10.0.0",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
-    "@trendmicro/react-sidenav": "^0.5.0",
-    "materialize-css": "^1.0.0",
-    "moment": "^2.29.1",
     "react-bootstrap": "^1.6.1",
+    "react-confirm-alert": "^2.7.0",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-toastify": "^7.0.4",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
