--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "dotenv": "^10.0.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "node-fetch": "^2.6.1",
     "querystring": "^0.2.1",
     "react": "^17.0.2",
